[metadata]
name = TorchPIV         
version = 0.1.1
author = Nikita Nazarov
author_email = nazarov.nik.an@gmail.com
description =Package for PIV data analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NikNazarov/TorchPIV
project_urls =
    Bug Tracker = https://github.com/NikNazarov/TorchPIV/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    matplotlib
    numpy
    opencv_python
    pandas
    PyQt5
    scipy
    watchdog
    # torch
    # torchvision
dependency_links = 
    # torch @ https://download.pytorch.org/whl/cu117/torch-2.0.1%%2Bcu117-cp38-cp38-win_amd64.whl
    # torchvision @ https://download.pytorch.org/whl/cu117/torchvision-0.15.2%%2Bcu117-cp39-cp39-win_amd64.whl



[options.packages.find]
where = src

[options.package_data]
* = *.json,